handle open/close Cart

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -158,7 +158,7 @@ ol {
 }
 
 .mt-8px {
-  margin-top: 8px;
+  margin-top: 8px !important;
 }
 
 .mt-12px {
@@ -170,7 +170,7 @@ ol {
 }
 
 .mt-20px {
-  margin-top: 16px;
+  margin-top: 20px !important;
 }
 
 .mr-8px {
