--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -1,28 +1,49 @@
 .cart {
   display: block;
-  width: 420px;
+  width: 400px;
   background-color: #fff;
-  padding: 22px;
-  box-shadow: -2px 2px 25px -8px rgba(0, 0, 0, 0.25);
+  box-shadow: -2px 2px 25px -8px rgba(0, 0, 0, 0.6);
   border-radius: 4px;
+  padding: 20px 0;
+  cursor: auto;
+}
+
+.play-icon {
+  position: absolute;
+  rotate: -90deg;
+  color: #fff;
+  right: 6%;
+  top: -2.5%;
 }
 
 .cart-heading {
   text-transform: uppercase;
   font-size: 1.8rem;
   letter-spacing: 1px;
-  font-weight: 400;
+  font-weight: 500;
+  padding: 0 20px;
+  margin-bottom: 10px;
+}
+
+.wrapper {
+  overflow-y: scroll;
+  overscroll-behavior: contain;
+  height: 350px;
+  border-bottom: 1px solid #e1e1e1;
+  &:hover {
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .cart-item {
-  margin-top: 10px;
   position: relative;
+  padding: 10px 20px;
+  cursor: pointer;
 
   .icon {
     position: absolute;
-    top: -8px;
-    left: 65px;
-    fill: var(--primary);
+    top: 1px;
+    left: 82px;
     border-radius: 50%;
     background-color: #fff;
     font-size: 1.7rem;
@@ -32,19 +53,26 @@
 
     &:hover {
       fill: #fff;
-      background-color: #333;
+      background-color: rgba($color: #333, $alpha: 0.2);
     }
   }
 
   &::after {
+    position: absolute;
     content: '';
     display: block;
     height: 1px;
     width: 100%;
+    left: 0;
     background-color: #88868662;
-    margin-top: 10px;
+    margin-top: 9px;
+  }
+
+  &:hover {
+    background-color: #ccc;
   }
 }
+
 .item-info {
   display: flex;
   justify-content: space-between;
@@ -76,6 +104,7 @@
   align-items: center;
   font-size: 1.3rem;
 }
+
 .quantity-price {
   display: flex;
 }
@@ -99,6 +128,7 @@
 .cart-total {
   display: flex;
   justify-content: space-between;
+  padding: 0 20px;
 }
 
 .sub-total {
@@ -106,6 +136,8 @@
 }
 
 .btn-comp-1 {
-  height: 50px;
+  text-align: center;
+  line-height: 50px;
   font-weight: 100;
+  margin: 0 20px;
 }
