--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -239,9 +239,9 @@ nav {
   top: 50px;
 }
 
-.cart-component[display-non] {
-  display: none;
-}
+// .cart-component[display-non] {
+//   display: none;
+// }
 
 .cart-component[opening] {
   animation: fade-up 0.5s linear forwards;
