--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,158 +1,390 @@
-$heading-color: #4d5959;
-$text-color: #999999;
-$link-color: #222222;
-$background-hover-color: #91704f;
+// $heading-color: #;
+// $text-color: #999999;
+// $link-color: #222222;
+// $background-hover-color: #91704f;
 
-.topbar {
-  background-color: rgba(0, 0, 0, 0.54) !important;
-  margin-bottom: 50px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+// .topbar {
+//   background-color: rgba(0, 0, 0, 0.54) !important;
+//   margin-bottom: 50px;
+//   padding-top: 50px;
+//   padding-bottom: 50px;
+// }
+
+// .topbar .title {
+//   color: #fff;
+//   font-size: 20px;
+//   line-height: 26px;
+//   font-weight: 400;
+//   letter-spacing: 2px;
+//   margin-bottom: 0px;
+// }
+
+// .content-login {
+//   margin: 80px auto;
+//   max-width: 410px;
+// }
+
+// .login-wrapper {
+//   color: $text-color;
+// }
+
+// .login-message {
+//   color: rgb(235, 0, 27);
+//   border: 1px solid rgb(235, 0, 27);
+//   background-color: rgba(rgb(235, 0, 27), 0.05);
+//   padding: 1rem 1.3rem;
+//   text-align: left;
+//   width: 100%;
+//   margin: 0 0 27.5px;
+// }
+
+// .login-message .title {
+//   font-size: 16px;
+//   text-transform: uppercase;
+//   font-weight: 700;
+//   margin: 0 0 20px;
+//   color: $heading-color;
+//   line-height: 1.4;
+//   letter-spacing: 2px;
+// }
+
+// .login-message .errors ul {
+//   padding-left: 44px;
+//   margin-top: 15px;
+//   margin-bottom: 40px;
+//   font-size: 14px;
+// }
+
+// .content-login .button {
+//   height: 40px;
+//   padding: 0 25px !important;
+//   font-size: 14px !important;
+//   margin-bottom: 20px;
+//   $background-hover-color: #91704f;
+// }
+
+// .content-login .login-wrapper .button:hover {
+//   background-color: $background-hover-color;
+//   border: $background-hover-color;
+//   border: solid;
+//   border-width: 0.727px;
+// }
+
+// .p-text {
+//   font-size: 14px;
+//   margin-bottom: 20px;
+// }
+
+// .link {
+//   font-size: 14px;
+//   color: $link-color;
+// }
+
+// .login-wrapper a:hover {
+//   color: $background-hover-color;
+// }
+
+// .login-guest-wrapper {
+//   color: $heading-color;
+//   text-transform: uppercase;
+//   font-weight: 300;
+//   letter-spacing: 2px;
+//   margin: 0 0 20px;
+// }
+
+// .guest-login-wrapper .title {
+//   color: $heading-color;
+//   line-height: 1.4;
+//   font-weight: 400;
+//   letter-spacing: 2px;
+//   margin-bottom: 20px;
+//   font-size: 20px;
+// }
+
+// .guest-login-wrapper hr {
+//   margin: 60px 0 50px;
+// }
+
+// //input
+// .form-control-ovr {
+//   &:focus {
+//     box-shadow: none !important;
+//     border-color: rgb(153, 153, 153) !important;
+//   }
+//   height: 4.5rem !important;
+//   font-size: 14px !important;
+//   padding-left: 14px !important;
+//   padding-right: 14px !important;
+//   padding-bottom: 0 !important;
+//   color: $text-color !important;
+// }
+
+// .password {
+//   font-size: 16px !important;
+//   line-height: 10px !important;
+// }
+
+// //lable
+// .form-floating-ovr > .label-ovr {
+//   padding-top: 10px !important;
+//   padding-bottom: 14px !important;
+//   padding-left: 15px !important;
+//   padding-right: 15px !important;
+//   font-size: 13px !important;
+// }
+
+// .asterisk {
+//   color: red;
+// }
+
+// .error-messsage {
+//   font-size: 12px;
+//   margin-top: -10px;
+// }
+
+// .exclamation {
+//   color: #eb001b;
+//   font-size: 12px;
+// }
+
+// @media (max-width: 641px) {
+//   .content-login {
+//     margin: 40px auto;
+//   }
+
+//   .guest-login-wrapper hr {
+//     margin: 30px 0 30px;
+//   }
+// }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-.topbar .title {
-  color: #fff;
-  font-size: 20px;
-  line-height: 26px;
-  font-weight: 400;
-  letter-spacing: 2px;
-  margin-bottom: 0px;
+.body {
+  background: #020410 !important;
+  height: 100vh;
 }
 
-.content-login {
-  margin: 80px auto;
-  max-width: 410px;
-}
-
-.login-wrapper {
-  color: $text-color;
-}
-
-.login-message {
-  color: rgb(235, 0, 27);
-  border: 1px solid rgb(235, 0, 27);
-  background-color: rgba(rgb(235, 0, 27), 0.05);
-  padding: 1rem 1.3rem;
-  text-align: left;
+.background {
   width: 100%;
-  margin: 0 0 27.5px;
+  height: 100vh;
+  background: url('../../assets/images/bg.webp') no-repeat;
+  background-size: cover;
+  background-position: right;
+  // background-position: 65% 35%;
+  filter: blur(10px);
 }
 
-.login-message .title {
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 72%;
+  height: 550px;
+  background: url('../../assets/images/bg.webp') no-repeat;
+  background-size: cover;
+  background-position: right;
+  // background-position: 95% 35%;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.container .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 58%;
+  height: 100%;
+  background: transparent;
+  // padding: 80px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  padding-right: 5px;
+  padding-left: 180px;
+  color: #162938;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.content .logo {
+  font-size: 30px;
+}
+.text-sci h2 {
+  font-size: 40px;
+  line-height: 1;
+}
+.text-sci h2 span {
+  font-size: 25px;
+}
+.text-sci p {
   font-size: 16px;
-  text-transform: uppercase;
-  font-weight: 700;
-  margin: 0 0 20px;
-  color: $heading-color;
-  line-height: 1.4;
-  letter-spacing: 2px;
+  margin: 20px 0;
 }
 
-.login-message .errors ul {
-  padding-left: 44px;
-  margin-top: 15px;
-  margin-bottom: 40px;
-  font-size: 14px;
+.social-icons i {
+  font-size: 30px;
+  color: #162938;
+  margin-right: 30px;
+  transition: 0.5s ease;
 }
 
-.content-login .button {
-  height: 40px;
-  padding: 0 25px !important;
-  font-size: 14px !important;
-  margin-bottom: 20px;
-  $background-hover-color: #91704f;
+.social-icons i:hover {
+  transform: scale(1.2);
 }
 
-.content-login .login-wrapper .button:hover {
-  background-color: $background-hover-color;
-  border: $background-hover-color;
-  border: solid;
-  border-width: 0.727px;
+.container .logreg-box {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(100% - 58%);
+  height: 100%;
+  overflow: hidden;
 }
 
-.p-text {
-  font-size: 14px;
-  margin-bottom: 20px;
+.logreg-box .form-box {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  backdrop-filter: blur(20px);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  color: #162938;
 }
 
-.link {
-  font-size: 14px;
-  color: $link-color;
+.logreg-box .form-box.login {
+  transform: translateX(0px);
+  transition: transform 0.6s ease;
+  transition-delay: 0.7s;
 }
 
-.login-wrapper a:hover {
-  color: $background-hover-color;
+.logreg-box.active .form-box.login {
+  transform: translateX(430px);
+  transition-delay: 0s;
 }
 
-.login-guest-wrapper {
-  color: $heading-color;
-  text-transform: uppercase;
-  font-weight: 300;
-  letter-spacing: 2px;
-  margin: 0 0 20px;
+.logreg-box .form-box.register {
+  transform: translateX(430px);
+  transition: transform 0.6s ease;
+  transition-delay: 0s;
 }
 
-.guest-login-wrapper .title {
-  color: $heading-color;
-  line-height: 1.4;
-  font-weight: 400;
-  letter-spacing: 2px;
-  margin-bottom: 20px;
-  font-size: 20px;
+.logreg-box.active .form-box.register {
+  transform: translateX(0px);
+  transition-delay: 0.7s;
 }
 
-.guest-login-wrapper hr {
-  margin: 60px 0 50px;
+.form-box h2 {
+  font-size: 32px;
+  text-align: center;
 }
 
-//input
-.form-control-ovr {
-  &:focus {
-    box-shadow: none !important;
-    border-color: rgb(153, 153, 153) !important;
-  }
-  height: 4.5rem !important;
-  font-size: 14px !important;
-  padding-left: 14px !important;
-  padding-right: 14px !important;
-  padding-bottom: 0 !important;
-  color: $text-color !important;
+.form-box h2 {
+  font-size: 32px;
+  text-align: center;
+}
+.form-box .input-box {
+  width: 340px;
+  height: 50px;
+  position: relative;
+  border-bottom: 2px solid #162938;
+  margin: 30px 0;
+}
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: 500;
+  padding-right: 28px;
 }
 
-.password {
-  font-size: 16px !important;
-  line-height: 10px !important;
+.input-box label {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  font-size: 16px;
+  font-weight: 500;
+  pointer-events: none;
+  transition: 0.5s ease;
 }
 
-//lable
-.form-floating-ovr > .label-ovr {
-  padding-top: 10px !important;
-  padding-bottom: 14px !important;
-  padding-left: 15px !important;
-  padding-right: 15px !important;
-  font-size: 13px !important;
+.input-box input:focus ~ label,
+.input-box input:valid ~ label {
+  top: -5px;
 }
 
-.asterisk {
-  color: red;
+.input-box .icon {
+  position: absolute;
+  top: 13px;
+  right: 0;
+  font-size: 19px;
+}
+
+.form-box .remember-forgot {
+  font-size: 14.5px;
+  font-weight: 500;
+  margin: 15px 0 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.remember-forgot label input {
+  accent-color: #162938;
+  margin-right: 3px;
+}
+.remember-forgot a {
+  color: #162938;
+  text-decoration: none;
+}
+.remember-forgot a:hover {
+  text-decoration: underline;
+}
+
+.btn {
+  width: 100%;
+  height: 45px;
+  background: #91704f;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  color: #e4e4e4;
+  font-weight: 500;
+  box-shadow: 0 0 10px ☐ rgba(0, 0, 0, 0.5);
+}
+
+.form-box .login-register {
+  font-size: 14.5px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 25px;
+}
+.login-register p a {
+  color: #162938;
+  font-weight: 600;
+  text-decoration: none;
+}
+.login-register p a:hover {
+  text-decoration: underline;
 }
 
 .error-messsage {
-  font-size: 12px;
   margin-top: -10px;
 }
 
 .exclamation {
   color: #eb001b;
-  font-size: 12px;
-}
-
-@media (max-width: 641px) {
-  .content-login {
-    margin: 40px auto;
-  }
-
-  .guest-login-wrapper hr {
-    margin: 30px 0 30px;
-  }
 }
