--- a/src/pages/Recover/Recover.module.scss
+++ b/src/pages/Recover/Recover.module.scss
@@ -4,6 +4,9 @@ $link-color: #222222;
 $background-hover-color: #91704f;
 
 .topbar {
+  background: url('../../assets/images/bg.webp') no-repeat;
+  background-size: cover;
+  background-position: top;
   background-color: rgba(0, 0, 0, 0.54) !important;
   margin-bottom: 50px;
   padding-top: 50px;
