--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,161 +1,3 @@
-// $heading-color: #;
-// $text-color: #999999;
-// $link-color: #222222;
-// $background-hover-color: #91704f;
-
-// .topbar {
-//   background-color: rgba(0, 0, 0, 0.54) !important;
-//   margin-bottom: 50px;
-//   padding-top: 50px;
-//   padding-bottom: 50px;
-// }
-
-// .topbar .title {
-//   color: #fff;
-//   font-size: 20px;
-//   line-height: 26px;
-//   font-weight: 400;
-//   letter-spacing: 2px;
-//   margin-bottom: 0px;
-// }
-
-// .content-login {
-//   margin: 80px auto;
-//   max-width: 410px;
-// }
-
-// .login-wrapper {
-//   color: $text-color;
-// }
-
-// .login-message {
-//   color: rgb(235, 0, 27);
-//   border: 1px solid rgb(235, 0, 27);
-//   background-color: rgba(rgb(235, 0, 27), 0.05);
-//   padding: 1rem 1.3rem;
-//   text-align: left;
-//   width: 100%;
-//   margin: 0 0 27.5px;
-// }
-
-// .login-message .title {
-//   font-size: 16px;
-//   text-transform: uppercase;
-//   font-weight: 700;
-//   margin: 0 0 20px;
-//   color: $heading-color;
-//   line-height: 1.4;
-//   letter-spacing: 2px;
-// }
-
-// .login-message .errors ul {
-//   padding-left: 44px;
-//   margin-top: 15px;
-//   margin-bottom: 40px;
-//   font-size: 14px;
-// }
-
-// .content-login .button {
-//   height: 40px;
-//   padding: 0 25px !important;
-//   font-size: 14px !important;
-//   margin-bottom: 20px;
-//   $background-hover-color: #91704f;
-// }
-
-// .content-login .login-wrapper .button:hover {
-//   background-color: $background-hover-color;
-//   border: $background-hover-color;
-//   border: solid;
-//   border-width: 0.727px;
-// }
-
-// .p-text {
-//   font-size: 14px;
-//   margin-bottom: 20px;
-// }
-
-// .link {
-//   font-size: 14px;
-//   color: $link-color;
-// }
-
-// .login-wrapper a:hover {
-//   color: $background-hover-color;
-// }
-
-// .login-guest-wrapper {
-//   color: $heading-color;
-//   text-transform: uppercase;
-//   font-weight: 300;
-//   letter-spacing: 2px;
-//   margin: 0 0 20px;
-// }
-
-// .guest-login-wrapper .title {
-//   color: $heading-color;
-//   line-height: 1.4;
-//   font-weight: 400;
-//   letter-spacing: 2px;
-//   margin-bottom: 20px;
-//   font-size: 20px;
-// }
-
-// .guest-login-wrapper hr {
-//   margin: 60px 0 50px;
-// }
-
-// //input
-// .form-control-ovr {
-//   &:focus {
-//     box-shadow: none !important;
-//     border-color: rgb(153, 153, 153) !important;
-//   }
-//   height: 4.5rem !important;
-//   font-size: 14px !important;
-//   padding-left: 14px !important;
-//   padding-right: 14px !important;
-//   padding-bottom: 0 !important;
-//   color: $text-color !important;
-// }
-
-// .password {
-//   font-size: 16px !important;
-//   line-height: 10px !important;
-// }
-
-// //lable
-// .form-floating-ovr > .label-ovr {
-//   padding-top: 10px !important;
-//   padding-bottom: 14px !important;
-//   padding-left: 15px !important;
-//   padding-right: 15px !important;
-//   font-size: 13px !important;
-// }
-
-// .asterisk {
-//   color: red;
-// }
-
-// .error-messsage {
-//   font-size: 12px;
-//   margin-top: -10px;
-// }
-
-// .exclamation {
-//   color: #eb001b;
-//   font-size: 12px;
-// }
-
-// @media (max-width: 641px) {
-//   .content-login {
-//     margin: 40px auto;
-//   }
-
-//   .guest-login-wrapper hr {
-//     margin: 30px 0 30px;
-//   }
-// }
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
   margin: 0;
@@ -167,6 +9,7 @@
 .body {
   background: #020410 !important;
   height: 100vh;
+  position: relative;
 }
 
 .background {
