--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -38,7 +38,6 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
   overflow: auto;
-  background-color: #333;
 }
 
 body {
@@ -195,6 +194,10 @@ ol {
 
 .mb-16px {
   margin-bottom: 16px;
+}
+
+.mr-8px {
+  margin-right: 8px;
 }
 
 .mr-12px {
