breadcrumb shop page

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -44,6 +44,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
+  // background-color: #333;
 }
 
 // Resets
