--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -3,6 +3,7 @@
   margin-bottom: 30px;
   transition: all 0.3s linear;
   padding-bottom: 16px;
+  cursor: pointer;
 
   &:hover {
     box-shadow: 0 0 10px 2px #00000014;
