--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .container {
   background-color: transparent;
-  border-bottom: 1px solid rgba($color: #fff, $alpha: 0.15);
+  border-bottom: 1px solid rgba($color: #fff, $alpha: 0.05);
 }
 
 // handle animation
@@ -59,9 +59,8 @@
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  background-color: rgba($color: #fff, $alpha: 0);
   padding: 0 40px;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
 }
 
 .main[light] {
@@ -72,6 +71,23 @@
   background-color: #fff;
   padding: 0 40px;
   transition: all 0.5s;
+  box-shadow: 0 10px 30px -10px #ccc;
+}
+
+.main.blur {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding: 0 40px;
+  transition: all 0.5s;
+  background-color: rgba($color: #fff, $alpha: 0.1);
+}
+
+.main[light].blur {
+  box-shadow: 0 10px 20px -15px #333;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 
 nav {
