--- a/src/pages/Shop/Shop.module.scss
+++ b/src/pages/Shop/Shop.module.scss
@@ -1,9 +1,57 @@
 .breadcrumb {
+  height: 350px;
+  width: 100%;
 }
 
 .shop-header {
   display: flex;
   flex-direction: column;
+  margin: 20px 0;
+  //   padding-bottom: 10px;
+  border-bottom: 1px solid #00000014;
+}
+
+.sorting {
+  padding: 0 10px;
+  color: #909097;
+  cursor: pointer;
+  user-select: none;
+  //   flex: 1 0;
+  text-align: right;
+  display: flex;
+}
+
+.sorting-content {
+  &:hover {
+    .sorting-text {
+      color: #333;
+    }
+
+    .sort-icon {
+      color: #333;
+    }
+  }
+}
+
+.sorting-text {
+  line-height: 30px;
+  transition: all 0.2s linear;
+
+  &:hover {
+    color: #333;
+  }
+}
+
+.counter-product {
+  font-size: 1.3rem;
+  margin-right: 20px;
+  transform: translateY(6px);
+}
+
+.sort-icon {
+  transition: all 0.2s linear;
+
+  margin-left: 10px;
 }
 
 .tabs {
@@ -11,12 +59,15 @@
 }
 
 .tab-item {
+  padding: 10px 10px;
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 0.3px;
+  color: #909097;
 }
 
-.tab-item {
-}
-
-.tab-item {
+.tab-item + .tab-item {
+  margin-left: 10px;
 }
 
 .sidebar-component {
