--- a/src/components/Text/Text.module.scss
+++ b/src/components/Text/Text.module.scss
@@ -1,4 +1,33 @@
 .wrapper {
+  position: relative;
+}
+
+.wrapper::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -6px;
+  width: 0;
+  height: 2px;
+  background-color: #000;
+  transition: width 0.3s ease-in-out;
+}
+
+.wrapper.hoverLight::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -6px;
+  width: 0;
+  height: 2px;
+  background-color: #fff;
+  transition: width 0.3s ease-in-out;
+}
+
+.wrapper:hover::after {
+  left: 0;
+  right: initial;
+  width: 100%;
 }
 
 .overflow {
