--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -109,20 +109,98 @@ nav {
   font-weight: 300;
 }
 
+// handle animation
+
+// default
+.header-link {
+  padding: 10px 10px;
+}
+
 .list-header li:hover {
   .header-link {
     transition: all 0.5s;
-    color: #64ffda;
+
+    &:hover .header-link-text::after {
+      left: 0;
+      right: initial;
+      width: 100%;
+    }
   }
+}
+
+// default
+.header-link-text {
+  position: relative;
+  transition: all 0.5s;
+
+  &::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -6px;
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    transition: width 0.3s ease-in-out;
+  }
+}
+
+.list-header li:hover {
+  .header-link {
+    transition: all 0.5s;
+
+    &:hover .header-link-text::after {
+      left: 0;
+      right: initial;
+      width: 100%;
+    }
+  }
+}
+
+// default
+.header-link-text {
+  position: relative;
+  transition: all 0.5s;
+
+  &::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -6px;
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    transition: width 0.3s ease-in-out;
+  }
+}
+
+// blur
+.header-link-text[blur] {
+  position: relative;
+  transition: all 0.5s;
+}
+
+.header-link-text[blur]::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -6px;
+  width: 0;
+  height: 2px;
+  background-color: #333;
+  transition: width 0.3s ease-in-out;
 }
 
 .list-header li .header-link {
   display: block;
   letter-spacing: 1px;
-  line-height: 79px;
+  line-height: 1.6;
+  height: 80px;
   text-transform: uppercase;
   text-decoration: none;
   color: #fff;
+  display: flex;
+  align-items: center;
 }
 
 .list-header li .header-link[light] {
