--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -49,7 +49,7 @@
     text-transform: uppercase;
     padding: 0 14px;
     font-size: 1.5rem;
-    line-height: 44px;
+    line-height: 1.6;
     border-left: 1px solid #00000014;
     border-right: 1px solid #00000014;
     cursor: pointer;
