--- a/src/pages/Shop/Shop.module.scss
+++ b/src/pages/Shop/Shop.module.scss
@@ -1,6 +1,51 @@
 .breadcrumb {
-  height: 350px;
+  position: relative;
+  height: 480px;
   width: 100%;
+  background-attachment: fixed;
+
+  .content {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    bottom: 50%;
+    transform: translateX(-50%) translateY(50%);
+    left: 50%;
+
+    // text-transform: uppercase;
+
+    .text {
+      color: #fff;
+      font-size: 5.5rem;
+      font-weight: 500;
+      letter-spacing: 1px;
+    }
+  }
+}
+
+.start {
+  font-weight: 500;
+}
+
+.current {
+  font-weight: 300;
+}
+
+.context {
+  display: flex;
+  color: #fff;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.context > p {
+  font-size: 1.4rem;
+}
+
+.breadcrumb-icon {
+  width: 20px;
+  font-size: 1.4rem;
 }
 
 .shop-header {
@@ -59,11 +104,16 @@
 }
 
 .tab-item {
-  padding: 10px 10px;
+  padding: 20px 10px;
   cursor: pointer;
   font-weight: 500;
   letter-spacing: 0.3px;
   color: #909097;
+  transition: all 0.2s linear;
+
+  &:hover {
+    color: #333;
+  }
 }
 
 .tab-item + .tab-item {
