--- a/src/components/Variation-Size/Variation-Size.module.scss
+++ b/src/components/Variation-Size/Variation-Size.module.scss
@@ -1,7 +1,13 @@
 .wrapper {
   padding: 5px 0;
-  margin: 8px 0;
+  margin-top: 5px;
   cursor: pointer;
+
+  &:hover {
+    .icon {
+      opacity: 1;
+    }
+  }
 }
 
 .name {
@@ -15,6 +21,8 @@
 }
 
 .icon {
-  width: 25px;
-  font-size: 1.4rem;
+  opacity: 0.2;
+  width: 30px;
+  font-size: 2rem;
+  transition: all 0.2s linear;
 }
