--- a/src/components/LoginNoti/LoginNoti.module.scss
+++ b/src/components/LoginNoti/LoginNoti.module.scss
@@ -4,33 +4,34 @@ $link-color: #222222;
 $background-hover-color: #91704f;
 
 .login-message {
-    color: rgb(235, 0, 27);
-    border: 1px solid rgb(235, 0, 27);
-    background-color: rgba(rgb(235, 0, 27), .05);
-    padding: 1rem 1.3rem;
-    text-align: left;
-    width: 100%;
-    margin: 0 0 27.5px;
+  color: rgb(235, 0, 27);
+  border: 1px solid rgb(235, 0, 27);
+  background-color: rgba(rgb(235, 0, 27), 0.05);
+  padding: 1rem 1.3rem;
+  text-align: left;
+  width: 100%;
+  margin: 0 0 27.5px;
 }
 
 .login-message .title {
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin: 0 0 20px;
-    color: $heading-color;
-    line-height: 1.4;
-    letter-spacing: 2px;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 0 0 20px;
+  color: $heading-color;
+  line-height: 1.4;
+  letter-spacing: 2px;
 }
 
 .login-message .errors ul {
-    padding-left: 44px;
-    margin-top: 15px;
-    margin-bottom: 40px;
-    font-size: 14px;
+  list-style-type: disc;
+  padding-left: 44px;
+  margin-top: 15px;
+  margin-bottom: 40px;
+  font-size: 14px;
 }
 
 .login-message .exclamation {
-    color: #EB001B;
-    font-size: 22px;
+  color: #eb001b;
+  font-size: 16px;
 }
