--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -17,7 +17,7 @@
   height: 100vh;
   background: url('../../assets/images/bg.webp') no-repeat;
   background-size: cover;
-  background-position: right;
+  background-position: center;
   // background-position: 65% 35%;
   filter: blur(10px);
 }
@@ -27,9 +27,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 74%;
+  width: 75%;
   height: 500px;
-  background: url('../../assets/images/bg.webp') no-repeat;
+  background: url('../../assets/images/bg-3.png') no-repeat;
   background-size: cover;
   background-position: right;
   // background-position: 95% 35%;
@@ -48,7 +48,8 @@
   padding-top: 80px;
   padding-bottom: 80px;
   padding-right: 5px;
-  padding-left: 180px;
+  padding-left: 130px;
+  padding-right: 80px;
   color: #162938;
   display: flex;
   justify-content: space-between;
@@ -140,7 +141,7 @@
   height: 50px;
   position: relative;
   border-bottom: 2px solid #162938;
-  margin: 30px 0;
+  margin: 15px 0;
 }
 .input-box input {
   width: 100%;
