--- a/src/pages/Reset/Reset.module.scss
+++ b/src/pages/Reset/Reset.module.scss
@@ -51,13 +51,17 @@ $background-hover-color: #91704f;
 }
 
 .p-sub-title {
-  font-size: 16px;
+  color: $heading-color;
+  line-height: 1.4;
   font-weight: 400;
+  letter-spacing: 2px;
+  font-size: 20px;
+  margin-bottom: 40px;
   text-align: center;
-  margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
-.button-wrapper{
+.button-wrapper {
   text-align: center;
 }
 
