--- a/src/components/adminComponents/SideModel/SideModel.module.scss
+++ b/src/components/adminComponents/SideModel/SideModel.module.scss
@@ -123,18 +123,28 @@
   justify-content: center;
   align-items: center;
   border-radius: 6px;
-  height: 240px;
+  width: max-content;
+  padding: 20px 20px;
+  margin: auto;
 
   img {
-    width: 150px;
+    border-radius: 6px;
+    display: block;
+    width: 100%;
+    overflow: hidden;
   }
+}
+
+.img-wrapper {
+  border-radius: 4px;
+  width: 200px;
 }
 
 .sell-price {
   color: var(--admin-font-color);
   font-size: 1.8rem;
   font-weight: 600;
-  margin-top: 16px;
+  margin-top: 25px;
 }
 
 .sale-price {
@@ -217,6 +227,9 @@
   margin-right: 6px;
   font-size: 1.2rem;
   border-radius: 4px;
+  min-width: 35px;
+  display: inline-block;
+  text-align: center;
 }
 
 .select-size.active {
@@ -333,5 +346,24 @@
   }
   100% {
     opacity: 0.5;
+  }
+}
+
+.colors-right-block {
+  appearance: none;
+  width: 22px;
+  height: 22px;
+  vertical-align: middle;
+  border-radius: 4px;
+  border: 1.5px solid rgba($color: #fff, $alpha: 0);
+  margin-right: 10px;
+  opacity: 0.5;
+  cursor: pointer;
+
+  &.active {
+    width: 23.5px;
+    height: 23.5px;
+    margin-right: 8.5px;
+    opacity: 1;
   }
 }
