--- a/src/layouts/CustomerLayout/CustomerLayout.module.scss
+++ b/src/layouts/CustomerLayout/CustomerLayout.module.scss
@@ -7,16 +7,19 @@
 }
 
 .topbar {
+  background: url('../../assets/images/bg-3.png') no-repeat;
+  background-size: cover;
+  background-position: top;
   background-color: rgba(0, 0, 0, 0.54) !important;
   margin-bottom: 50px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 80px;
+  padding-bottom: 80px;
   .title {
     text-align: center;
     color: #fff;
     font-size: 20px;
     line-height: 26px;
-    font-weight: 400;
+    font-weight: 500;
     letter-spacing: 2px;
     margin-bottom: 0px;
   }
