--- a/src/pages/Wishlist/Wishlist.module.scss
+++ b/src/pages/Wishlist/Wishlist.module.scss
@@ -6,10 +6,13 @@
 }
 
 .topbar {
+  background: url('../../assets/images/bg.webp') no-repeat;
+  background-size: cover;
+  background-position: top;
   background-color: rgba(0, 0, 0, 0.54) !important;
-  margin-bottom: 60px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .topbar .title {
@@ -17,7 +20,7 @@
   color: #fff;
   font-size: 20px;
   line-height: 26px;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 2px;
   margin-bottom: 0px;
 }
