--- a/src/components/adminComponents/Button/Button.module.scss
+++ b/src/components/adminComponents/Button/Button.module.scss
@@ -10,6 +10,10 @@
   width: fit-content;
   font-weight: 500;
   transition: all 0.1s linear;
+
+  &:hover {
+    background-color: rgba($color: #3c82f6, $alpha: 0.7);
+  }
 }
 
 .container.active {
@@ -53,5 +57,13 @@
     &:hover {
       background-color: #dc2625;
     }
+  }
+}
+
+.danger {
+  background-color: #d7422d;
+
+  &:hover {
+    background-color: #c53030;
   }
 }
