--- a/src/layouts/HeaderOnly/HeaderOnly.module.scss
+++ b/src/layouts/HeaderOnly/HeaderOnly.module.scss
@@ -17,6 +17,7 @@
   backdrop-filter: blur(10px);
   transform: translateY(0);
   transition: all 0.4s ease-in-out;
+  background-color: #333;
 }
 
 .header-component.hide {
