--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,3 +1,28 @@
-.test-css {
-  color: red;
+.wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  color: #fff;
+  font-weight: inherit;
+}
+
+.wrapper.h100 {
+  height: 100%;
+}
+
+.wrapper.w100 {
+  width: 100%;
+}
+
+.wrapper.upperCase {
+  text-transform: uppercase;
+}
+
+.wrapper.opposite {
+  color: #000;
+  background-color: #fff;
+}
+
+.wrapper.outline {
+  border: 1px solid #000;
 }
