--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -21,7 +21,7 @@
 
   &::placeholder {
     /* Edge 12-18 */
-    color: rgba($color: #fff, $alpha: 0.5);
+    color: rgba($color: #333, $alpha: 0.5);
   }
 }
 
