--- a/src/pages/Customer/Order/Order.module.scss
+++ b/src/pages/Customer/Order/Order.module.scss
@@ -59,18 +59,22 @@
 
 td.order {
   color: #000;
+  text-align: center;
 }
 
 td.date {
   color: #000;
+  text-align: center;
 }
 
 td.status {
   color: #000;
+  text-align: center;
 }
 
 td.total {
   color: #000;
+  text-align: center;
 }
 
 td.action {
