--- a/src/layouts/CustomerLayout/CustomerLayout.module.scss
+++ b/src/layouts/CustomerLayout/CustomerLayout.module.scss
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   background-color: #fff;
+  padding-top: 120px !important;
 }
 
 .topbar {
@@ -28,10 +29,38 @@
 .section-1100 {
   min-width: 1100px;
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 0 auto 50px auto;
 }
-// body {
-//   font-family: 'Poppins', sans-serif !important;
-//   font-size: 1.4rem;
-//   line-height: 1.5;
-// }
+
+.header-component {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  background-color: transparent;
+}
+
+.header-component.show {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 10px 30px -10px var(--navy-shadow);
+  backdrop-filter: blur(10px);
+  transform: translateY(0);
+  transition: all 0.4s ease-in-out;
+}
+
+.header-component.hide {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 10px 30px -10px var(--navy-shadow);
+  backdrop-filter: blur(10px);
+  transform: translateY(-130px);
+  transition: all 0.4s ease-in-out;
+}
