edit detail invoice modal

--- a/src/components/DetailInvoiceModal/DetailInvoiceModal.module.scss
+++ b/src/components/DetailInvoiceModal/DetailInvoiceModal.module.scss
@@ -47,6 +47,8 @@
     font-weight: 300;
     background: url('../../assets/images/bg-3-reverse.png') no-repeat;
     background-size: cover;
+    background-position: right top;
+    padding-bottom: 10px;
     .info {
       padding-left: 20px;
       h2 {
