--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -149,8 +149,109 @@
       padding-bottom: 40px;
     }
     .products-container {
+      margin-left: 70px;
+      margin-right: 70px;
+      .button-viewall {
+        display: flex;
+        justify-content: center;
+        padding-top: 23px;
+        .btn-accent {
+          background-color: #fff !important;
+          box-shadow: 0 0 0 1px black inset !important;
+        }
+        .btn {
+          position: relative;
+          font-size: 15px;
+          font-family: 'Yantramanav', sans-serif;
+          text-transform: uppercase;
+          letter-spacing: 0.6px;
+          padding: 0 40px;
+          min-height: 58px;
+          line-height: 58px;
+          transition: all 300ms linear 0ms;
+          display: inline-flex;
+          gap: 10px;
+          align-items: center;
+          cursor: pointer;
+          border: none;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          justify-content: center;
+          &::after {
+            content: '';
+            border-bottom: 1px solid;
+            position: absolute;
+            left: 40px;
+            right: 40px;
+            margin-top: 18px;
+            transform-origin: left center;
+            transform: scale(0, 1);
+            transition: transform 0.4s cubic-bezier(0.37, 0.31, 0.2, 0.85);
+          }
+          &:hover::after {
+            transform: scale(1, 1);
+          }
+        }
+        .text-black {
+          color: #222222;
+        }
+        a {
+          text-decoration: none;
+          transition: all 300ms linear 0ms;
+          color: #222222;
+        }
+      }
     }
   }
+}
+
+.categories-container {
+  display: flex;
+  gap: 24px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 90px;
+  width: 100%;
+  display: flex;
+  .dresses-container {
+    width: 33.33%;
+    height: 620px;
+    overflow: hidden;
+    img {
+      &:hover {
+        transform: scale(1.06) translateX(6px);
+        transition: visibility 0.35s ease, opacity 0.35s ease, transform 0.6s cubic-bezier(0.61, 1, 0.88, 1);
+      }
+    }
+  }
+  .tshirt-container {
+    width: 33.33%;
+    height: 620px;
+    overflow: hidden;
+    img {
+      &:hover {
+        transform: scale(1.06) translateX(6px);
+        transition: visibility 0.35s ease, opacity 0.35s ease, transform 0.6s cubic-bezier(0.61, 1, 0.88, 1);
+      }
+    }
+  }
+  .outerwear-container {
+    width: 33.33%;
+    height: 620px;
+    overflow: hidden;
+    img {
+      &:hover {
+        transform: scale(1.06) translateX(6px);
+        transition: visibility 0.35s ease, opacity 0.35s ease, transform 0.6s cubic-bezier(0.61, 1, 0.88, 1);
+      }
+    }
+  }
+}
+
+.fadeInUp {
+  animation-name: fadeInUpAnimation;
+  animation-duration: 1.25s;
 }
 
 @keyframes cms-slider-zoom {
@@ -169,5 +270,17 @@
   }
   50% {
     opacity: 1;
+  }
+}
+
+@keyframes fadeInUpAnimation {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
   }
 }
