--- a/src/pages/Customer/Order/Order.module.scss
+++ b/src/pages/Customer/Order/Order.module.scss
@@ -57,35 +57,24 @@
   }
 }
 
-th.order {
-}
-
-th.date {
-}
-
-th.status {
-}
-
-th.total {
-}
-
-th.action {
-}
-
 td.order {
   color: #000;
+  text-align: center;
 }
 
 td.date {
   color: #000;
+  text-align: center;
 }
 
 td.status {
   color: #000;
+  text-align: center;
 }
 
 td.total {
   color: #000;
+  text-align: center;
 }
 
 td.action {
