--- a/src/pages/Wishlist/Wishlist.module.scss
+++ b/src/pages/Wishlist/Wishlist.module.scss
@@ -6,10 +6,13 @@
 }
 
 .topbar {
+  background: url('../../assets/images/bg.webp') no-repeat;
+  background-size: cover;
+  background-position: top;
   background-color: rgba(0, 0, 0, 0.54) !important;
-  margin-bottom: 60px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .topbar .title {
@@ -17,7 +20,7 @@
   color: #fff;
   font-size: 20px;
   line-height: 26px;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 2px;
   margin-bottom: 0px;
 }
@@ -114,82 +117,5 @@
     justify-content: center;
     gap: 10px;
     font-size: 18px;
-  }
-}
-.button-block {
-  width: 100%;
-  text-align: center;
-  .button {
-    border-radius: 2px;
-  }
-}
-.quickview-btn {
-  color: #fff;
-  background-color: #000;
-  border: #000;
-  border-style: solid;
-  border-width: 0.727px;
-}
-
-.quickview-btn:hover {
-  color: #000;
-  background-color: #fff;
-  border-style: solid;
-  border-width: 0.727px;
-  transition: all 0.3s ease;
-}
-
-.addtocart-btn {
-  color: #000;
-  border: #000;
-  border-style: solid;
-  border-width: 0.727px;
-}
-
-.addtocart-btn:hover {
-  color: #fff;
-  background-color: #000;
-  border-style: solid;
-  border-width: 0.727px;
-  transition: all 0.3s ease;
-}
-
-.text-btn {
-  font-size: 14px;
-  text-transform: uppercase;
-  display: block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  line-height: 3rem;
-}
-
-.figure img.image-main {
-  max-width: 180px;
-}
-.figure img.image-hover {
-  position: absolute;
-  max-width: 180px;
-  top: 0;
-  bottom: 0;
-  object-fit: contain;
-  opacity: 0;
-  transition: opacity 0.8s;
-}
-
-.figure {
-  width: 90px;
-  height: 140px;
-  position: relative;
-  overflow: hidden;
-  max-width: 180px;
-  padding: 0px 0.5px;
-
-  img.image-hover {
-    transition: transform 0.9s ease; // add this line
-    &:hover {
-      opacity: 1;
-      transform: scale(1.1); // add this line
-    }
   }
 }
