--- a/src/pages/Location/Location.module.scss
+++ b/src/pages/Location/Location.module.scss
@@ -30,6 +30,7 @@ div.background {
 div.divide {
      background-color: inherit;
      height: 50px;
+     width: 100%;
 }
 
 .title {
@@ -88,29 +89,63 @@ div.divide {
 }
 
 
+// .image-container {
+//      width: 100%;
+//      height: 500px;
+//      /* Đặt chiều cao của div */
+//      overflow: hidden;
+//      /* Ẩn phần ảnh ra ngoài khung */
+//      position: relative;
+//      /* Để sử dụng position absolute cho ảnh */
+//      margin-bottom: 50px;
+// }
+
+// .image-container img {
+//      width: 100%;
+//      /* height: 100%; */
+//      /* object-fit: fill; */
+//      /* object-position: bottom; */
+//      background-repeat: no-repeat;
+//      background-position: 50% 0;
+//      background-size: cover;
+//      // position: absolute;
+//      // left: 50%;
+//      // transform: translateX(-50%);
+// }
+
+// .image-location{
+//      width: 100%;
+//      height: 500px;
+//      z-index: 2;
+
+// }
+
 .image-container {
      width: 100%;
-     height: 500px;
-     /* Đặt chiều cao của div */
+     height: 520px;
      overflow: hidden;
-     /* Ẩn phần ảnh ra ngoài khung */
+     display: flex;
+     justify-content: center;
+     align-items: center;
      position: relative;
-     /* Để sử dụng position absolute cho ảnh */
      margin-bottom: 50px;
 }
 
 .image-container img {
-     width: 100%;
-     /* height: 100%; */
-     /* object-fit: fill; */
-     /* object-position: bottom; */
-     background-repeat: no-repeat;
-     background-position: 50% 0;
-     background-size: cover;
-     // position: absolute;
-     // left: 50%;
-     // transform: translateX(-50%);
+     // max-width: 100%;
+     // max-height: 100%;
+     // object-fit: cover;
+     width: inherit;
 }
+
+.image-location {
+     position: absolute;
+     z-index: 2;
+     color: white;
+     font-size: 80px;
+     text-align: center;
+}
+
 
 .bd-under {
      border-top: 1px solid #e7e7e7;
@@ -123,6 +158,7 @@ div.divide {
 .center {
      margin-bottom: auto;
      margin-top: auto;
+     text-align: center;
 }
 
 .fb-title3 {
@@ -183,4 +219,13 @@ div.background1 {
      width: 100%;
      height: 60px;
      // padding-left: 0;
+}
+
+.icon{
+     padding: 0 10px;
+}
+
+
+.slider-quote {
+     font-size: 30px;
 }
